--- a/Margaux.qmd
+++ b/Margaux.qmd
@@ -208,6 +208,23 @@ plot.pca.fd(TempACPF)
 ```
 
 
+```{r}
+# Installer ggplot2 si ce n'est pas déjà fait
+# install.packages("ggplot2")
+
+# Charger la bibliothèque ggplot2
+library(ggplot2)
+
+# Exemple de données fictives
+df <- data.frame(
+  France = c(100, 120, 150, 180, 200),
+  Germany = c(80, 90, 110, 130, 150),
+  UK = c(120, 130, 140, 160, 180)
+)
+
+
+
+```
 
 
 
