--- a/Projet_final.Rmd
+++ b/Projet_final.Rmd
@@ -24,7 +24,22 @@ output:
     citation_package: natbib
 ---
 
-# Introduction 
+# Environnement de travail 
+
+```{r}
+library(fda)
+library(dplyr)
+library(tidyverse)
+```
+
+# Introduction
+
+Ce projet vise à sélectionner et analyser un jeu de données fonctionnelles inédit, effectuer un lissage des données si nécessaire, puis appliquer et interpréter des méthodes de statistique exploratoire telles que la moyenne, la variance, la covariance, la corrélation et l'analyse en composantes principales (ACP) fonctionnelle.
+
+Notre étude se focalise sur la dette de divers pays dans le monde sur une période de 31 ans, allant de 1990 à 2021. La base de données initiale comprend 176 pays, mais nous avons décidé de restreindre notre analyse aux pays sans données égales à zéro, afin d'éviter tout biais. Ainsi, nous avons retenu 46 pays pour notre étude.
+
+Le jeu de données utilisé pour cette étude peut être retrouvé à l'adresse suivante : https://www.kaggle.com/datasets/mathurinache/detteparpays
+
 
 # Prétaitement des données
 
@@ -52,6 +67,7 @@ for (colname in names(data)) {
 #head(data)
 ```
 
+Notons que nous avons choisit de prendre que les pays avec des données non nulles. En effet, nous avons remarqué que certains pays avaient des données nulles sur certaines années. Nous avons donc décidé de ne pas prendre en compte ces pays pour notre étude. Il nous reste ainsi 46 pays à étudier.
 
 ```{r}
 library(tidyr)
@@ -85,5 +101,34 @@ Nous allons observer la dette de la France entre 1990 et 2021
 plot(df$France, type = "l", col = "blue", xlab = "Année", ylab = "Dette", main = "Dette de la France")
 ```
 
-De 1990 à 2000, la dette augmente de manière relativement douce. Puis, la courbe semble plus plate, indiquant un ralentissement de l'augmentation de la dette ou une période de stagnation. Entre les années 2005 et 2010, il y a une augmentation rapide de la dette, ce qui pourrait correspondre à la crise financière mondiale de 2008 et ses répercussions économiques.Autour de l'année 2015, la dette semble atteindre un plateau, suivie d'une légère diminution qui pourrait indiquer des mesures d'austérité ou une croissance économique améliorant la capacité de la France à gérer sa dette.
-    Nouvelle augmentation : Vers la fin de la période, la dette semble augmenter de nouveau, ce qui pourrait être lié à des événements économiques récents, comme la crise du COVID-19 qui a nécessité des dépenses gouvernementales accrues pour soutenir l'économie.
+De 1990 à 2000, la dette augmente de manière relativement douce. Puis, la courbe semble plus plate, indiquant un ralentissement de l'augmentation de la dette ou une période de stagnation. Entre les années 2005 et 2010, il y a une augmentation rapide de la dette, ce qui pourrait correspondre à la crise financière mondiale de 2008 et ses répercussions économiques.Autour de l'année 2015, la dette semble atteindre un plateau, suivie d'une légère diminution qui pourrait indiquer des mesures d'austérité ou une croissance économique améliorant la capacité de la France à gérer sa dette. Vers la fin de la période, la dette semble augmenter de nouveau, ce qui pourrait être lié à des événements économiques récents, comme la crise du COVID-19 qui a nécessité des dépenses gouvernementales accrues pour soutenir l'économie.
+
+
+##Courbe évolutive/Boxplot des pays retenus
+
+```{r}
+# Reorganisation du df pour faciliter la premiere visualisation
+years <- 1990:2021
+ndf <- cbind(years,df)
+data_longer <-  ndf%>%pivot_longer(!years, names_to="pays", values_to="Dette")
+head(data_longer)
+```
+
+
+```{r}
+library(ggplot2)
+ggplot(data_longer, aes(x=years, y=Dette, color=pays)) + geom_line() +  
+  xlab("Années") +
+  ylab("Dette") +
+  ggtitle("Figure 1:  Dette  pour chaque pays au cours du temps ")
+```
+
+```{r}
+ggplot(data = data_longer,aes(x =pays, y = Dette)) +
+  geom_boxplot() +
+  xlab("Pays") +
+  ylab("Distribution de la variable d'intérêt")+
+  coord_flip()+ 
+  ggtitle("Figure 2: Boxplot comparatifs")
+```
+
