--- a/Projet.Rmd
+++ b/Projet.Rmd
@@ -53,22 +53,22 @@ head(df)
 
 ```{r}
 
-# Utiliser les rownames comme variable pour les années
-df$Annee <- as.numeric(rownames(df))
-
-# Filtrer le data frame pour ne conserver que les données de la France
-df_france <- df[, c("Annee", "France")]
-
-# Convertir le data frame en format long avec tidyr
-df_france_long <- gather(df_france, key = "Pays", value = "Dette", -Annee)
-
-# Créer le ggplot
-ggplot(df_france_long, aes(x = Annee, y = Dette)) +
-  geom_line() +
-  labs(title = "Dette de la France au fil du temps",
-       x = "Année",
-       y = "Dette") +
-  theme_minimal()
+# # Utiliser les rownames comme variable pour les années
+# df$Annee <- as.numeric(rownames(df))
+# 
+# # Filtrer le data frame pour ne conserver que les données de la France
+# df_france <- df[, c("Annee", "France")]
+# 
+# # Convertir le data frame en format long avec tidyr
+# df_france_long <- gather(df_france, key = "Pays", value = "Dette", -Annee)
+# 
+# # Créer le ggplot
+# ggplot(df_france_long, aes(x = Annee, y = Dette)) +
+#   geom_line() +
+#   labs(title = "Dette de la France au fil du temps",
+#        x = "Année",
+#        y = "Dette") +
+#   theme_minimal()
 ```
 
 # Reorganisation des données
@@ -123,7 +123,7 @@ splbasis = create.bspline.basis(xrange,norder=6,breaks=years)
 gcv = 1:40
 for (i in 1:40){
   lambda = exp(i-10)
-  fdparTemp = fdPar(splbasis,Lfdobj = 2,lambda=lambda)
+  fdparTemp = fdPar(splbasis,Lfdobj = 4,lambda=lambda)
   smoothdata = smooth.basis(years,y,fdParobj = fdparTemp)
   gcv[i] = mean(smoothdata$gcv) #n valeur de critere general pour un lambda donnée soit la moyenne 
 }
@@ -134,7 +134,7 @@ which.min(gcv)
 ```{r}
 lambda = exp(which.min(gcv)-10)
 lambda
-fdparTemp = fdPar(splbasis,Lfdobj = 2,lambda=lambda)
+fdparTemp = fdPar(splbasis,Lfdobj = 4,lambda=lambda)
 smoothdata = smooth.basis(years,y,fdParobj = fdparTemp)
 ```
 
@@ -157,6 +157,7 @@ On peut représenter l'évolution "moyenne" des emissions de co2 en traçant la 
 
 ```{r}
 meantemp = mean.fd(smoothdata$fd) #moyenne (objet fonctionnel fd)
+meantemp
 ```
 
 
